// Vitest Snapshot v1

exports[`heading > renders with id when slug is not present 1`] = `
<DocumentFragment>
  <div
    class="p-2 md:p-4 transition duration-0 hover:duration-150 hover:bg-gray-100 target:bg-gray-100 text-gray-600 hover:text-black rounded-md ring-inset hover:ring-1 target:ring-1 hover:ring-gray-300 target:ring-gray-300 md:flex relative text-2xl group false"
    id="hopefully-random-id"
  >
    <a
      class="align-middle inline-block inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis font-bold hover:text-c-blue-hover invisible group-hover:visible"
      href="/#hopefully-random-id"
    >
      <svg
        aria-hidden="true"
        class="h-5 rotate-45 inline"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.232 4.232a2.5 2.5 0 013.536 3.536l-1.225 1.224a.75.75 0 001.061 1.06l1.224-1.224a4 4 0 00-5.656-5.656l-3 3a4 4 0 00.225 5.865.75.75 0 00.977-1.138 2.5 2.5 0 01-.142-3.667l3-3z"
        />
        <path
          d="M11.603 7.963a.75.75 0 00-.977 1.138 2.5 2.5 0 01.142 3.667l-3 3a2.5 2.5 0 01-3.536-3.536l1.225-1.224a.75.75 0 00-1.061-1.06l-1.224 1.224a4 4 0 105.656 5.656l3-3a4 4 0 00-.225-5.865z"
        />
      </svg>
    </a>
    <span
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis flex-none"
    >
      <span
        class="border border-1 rounded bg-red-100 text-red-900 border-red-300 p-0 px-2 "
      >
        TODO
      </span>
    </span>
    <span
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis font-bold grow"
    >
      <h1
        class="inline"
        id="hopefully-random-id"
      >
        Collect underpants
      </h1>
    </span>
    <span
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis space-x-1 space-x-reverse space-x-y space-y-reverse flex flex-row-reverse flex-wrap w-2/6"
    >
      <span
        class="border border-1 rounded-full bg-blue-100 text-blue-900 border-blue-300 text-xs h-6 py-1 px-2 "
      >
        idea
      </span>
      <span
        class="border border-1 rounded-full bg-blue-100 text-blue-900 border-blue-300 text-xs h-6 py-1 px-2 "
      >
        strategy
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`heading > renders with slug as id when present 1`] = `
<DocumentFragment>
  <div
    class="p-2 md:p-4 transition duration-0 hover:duration-150 hover:bg-gray-100 target:bg-gray-100 text-gray-600 hover:text-black rounded-md ring-inset hover:ring-1 target:ring-1 hover:ring-gray-300 target:ring-gray-300 md:flex relative text-2xl group false"
    id="some-slug"
  >
    <a
      class="align-middle inline-block inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis font-bold hover:text-c-blue-hover invisible group-hover:visible"
      href="/#some-slug"
    >
      <svg
        aria-hidden="true"
        class="h-5 rotate-45 inline"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.232 4.232a2.5 2.5 0 013.536 3.536l-1.225 1.224a.75.75 0 001.061 1.06l1.224-1.224a4 4 0 00-5.656-5.656l-3 3a4 4 0 00.225 5.865.75.75 0 00.977-1.138 2.5 2.5 0 01-.142-3.667l3-3z"
        />
        <path
          d="M11.603 7.963a.75.75 0 00-.977 1.138 2.5 2.5 0 01.142 3.667l-3 3a2.5 2.5 0 01-3.536-3.536l1.225-1.224a.75.75 0 00-1.061-1.06l-1.224 1.224a4 4 0 105.656 5.656l3-3a4 4 0 00-.225-5.865z"
        />
      </svg>
    </a>
    <span
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis flex-none"
    >
      <span
        class="border border-1 rounded bg-red-100 text-red-900 border-red-300 p-0 px-2 "
      >
        TODO
      </span>
    </span>
    <span
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis font-bold grow"
    >
      <h1
        class="inline"
        id="some-slug"
      >
        Collect underpants
      </h1>
    </span>
    <span
      class="inline-block align-baseline align-text-bottom mr-3 last:mr-0 text-ellipsis space-x-1 space-x-reverse space-x-y space-y-reverse flex flex-row-reverse flex-wrap w-2/6"
    >
      <span
        class="border border-1 rounded-full bg-blue-100 text-blue-900 border-blue-300 text-xs h-6 py-1 px-2 "
      >
        idea
      </span>
      <span
        class="border border-1 rounded-full bg-blue-100 text-blue-900 border-blue-300 text-xs h-6 py-1 px-2 "
      >
        strategy
      </span>
    </span>
  </div>
</DocumentFragment>
`;
